Use Double.valueOf()